Added app icons. Added genre support. + code improvements

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -1,14 +1,12 @@
 @import './app/reboot';
 @import './app/typo';
-
+@import './app/icon';
 
 @import '../../component/Layout/Layout';
 @import '../../component/Layout/Layer/Layer';
 @import '../../component/Layout/Stack/Stack';
 @import '../../component/Layout/Header/Header';
 
-
 @import '../../component/Stack/Movie/Movie';
-
 
 @import '../../view/Main/Main';
