--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -19,10 +19,7 @@
   &-content {
     flex-grow: 1;
     overflow-x: scroll;
-    scrollbar-width: none;
+    -webkit-overflow-scrolling: touch;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
   }
 }
