--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -1,35 +1,80 @@
 .movie-stack {
   &-backdrop {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+    overflow: hidden;
 
     img {
       display: block;
       width: 100vw;
       height: 100vh;
       object-fit: cover;
+      animation: backdrop-zoom 90s linear forwards;
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,0));
     }
   }
 
   &-content {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    padding: 80px;
+    position: relative;
     z-index: 1;
-
-    //background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8));
-    //mask-image: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,.2));
-
-    //backdrop-filter: blur(30px);
-
-    padding: 40px;
+    height: 100%;
+    text-shadow: 1px 1px 0 rgba(0,0,0,.4);
   }
 
+  &-date {
+    font-size: 18px;
+    margin-bottom: 40px;
+  }
 
+  &-overview {
+    max-width: 55%;
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
 
+  &-genres {
+    font-size: 22px;
+    margin-bottom: 40px;
+  }
+
+  &-rating {
+    &-number {
+      font-size: 76px;
+    }
+  }
+}
+
+@keyframes backdrop-zoom {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.3);
+  }
+}
+
+@keyframes show-up {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 40px, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
