Added movie search functionality, first approach

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -7,6 +7,9 @@
 @import '../../component/Layout/Stack/Stack';
 @import '../../component/Layout/Header/Header';
 
+@import '../../component/Poster/Poster';
+
 @import '../../component/Stack/Movie/Movie';
+@import '../../component/Stack/Search/Search';
 
 @import '../../view/Main/Main';
