--- a/src/component/Layout/Layer/Layer.scss
+++ b/src/component/Layout/Layer/Layer.scss
@@ -9,6 +9,7 @@
   will-change: opacity, transform;
   transition: transform .4s ease;
   transform: scale(.95) translate3d(0,0,0);
+  backdrop-filter: blur(30px);
 
   &.active {
     transform: scale(1) translate3d(0,0,0);
