--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -27,7 +27,7 @@
   }
 
   &-content {
-    padding: 80px;
+    padding: 40px;
     position: relative;
     z-index: 1;
     height: 100%;
@@ -36,12 +36,12 @@
 
   &-date {
     font-size: 18px;
-    margin-bottom: 40px;
   }
 
   &-overview {
-    max-width: 55%;
+    max-width: 768px;
     font-size: 24px;
+    padding-top: 40px;
     margin-bottom: 40px;
   }
 
