Added Rating stars indicator to movie detail. Mobile adjustments

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -8,6 +8,7 @@
 @import '../../component/Layout/Header/Header';
 
 @import '../../component/Poster/Poster';
+@import '../../component/Rating/Rating';
 
 @import '../../component/Stack/Movie/Movie';
 @import '../../component/Stack/Search/Search';
