--- a/src/component/Layout/Header/Header.scss
+++ b/src/component/Layout/Header/Header.scss
@@ -2,11 +2,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 40px 0;
+  padding: 20px 20px 0;
 
   &-search {
     i {
-      font-size: 48px;
+      font-size: 32px;
+    }
+  }
+}
+
+@media(min-width: 768px) {
+  .ui-header {
+    padding: 40px 40px 0;
+
+    &-search {
+      i {
+        font-size: 48px;
+      }
     }
   }
 }
