--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -1,8 +1,11 @@
+html, body, #root {
+  height: 100%;
+}
+
 .layer-main {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
   transform: scale(1);
   transition: transform .3s ease;
 
@@ -15,8 +18,13 @@
   }
 
   &-content {
-    flex-grow: 1;
+    flex: 1;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
