--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -8,7 +8,6 @@
     overflow: hidden;
 
     img {
-      display: block;
       width: 100vw;
       height: 100vh;
       object-fit: cover;
@@ -27,7 +26,7 @@
   }
 
   &-content {
-    padding: 40px;
+    padding: 20px;
     position: relative;
     z-index: 1;
     height: 100%;
@@ -35,12 +34,13 @@
   }
 
   &-date {
+    padding-top: 10px;
     font-size: 18px;
   }
 
   &-overview {
-    max-width: 768px;
-    font-size: 24px;
+    max-width: 820px;
+    font-size: 18px;
     padding-top: 40px;
     margin-bottom: 40px;
   }
@@ -51,11 +51,21 @@
   }
 
   &-rating {
-    &-number {
-      font-size: 76px;
+  }
+}
+
+@media(min-width: 768px) {
+  .movie-stack {
+    &-content {
+      padding: 40px;
+    }
+
+    &-overview {
+      font-size: 24px;
     }
   }
 }
+
 
 @keyframes backdrop-zoom {
   from {
@@ -78,3 +88,5 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+
