--- a/src/component/Stack/Search/Search.scss
+++ b/src/component/Stack/Search/Search.scss
@@ -3,8 +3,8 @@
     padding: 40px 40px 20px;
     position: sticky;
     top: 0;
-    background-color: rgba(0,0,0,.7);
-    backdrop-filter: blur(30px);
+    background-color: rgba(0,0,0,.8);
+    backdrop-filter: blur(60px);
   }
 
   &-input {
@@ -30,19 +30,27 @@
   }
 
   &-grid {
-    padding: 0 40px 40px;
+    padding: 0 10px 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin: 0 -20px;
 
     &-item {
-      padding: 20px;
-      width: 20%;
+      padding: 10px;
+      width: 50%;
+    }
+  }
+}
 
-      img {
-        height: 100%;
-        background-color: red;
+
+@media(min-width: 768px) {
+  .search-stack {
+    &-grid {
+      padding: 0 20px 20px;
+
+      &-item {
+        padding: 20px;
+        width: 20%;
       }
     }
   }
