--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -9,6 +9,7 @@
 
 @import '../../component/Poster/Poster';
 @import '../../component/Rating/Rating';
+@import '../../component/Genres/Genres';
 
 @import '../../component/Stack/Movie/Movie';
 @import '../../component/Stack/Search/Search';
