--- a/src/asset/scss/app/typo.scss
+++ b/src/asset/scss/app/typo.scss
@@ -5,6 +5,14 @@
   font-weight: normal;
 }
 
+@font-face {
+  font-family: 'Oswald';
+  src: url('../../font/Oswald/Oswald-Light.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 300;
+}
+
+
 h1 {
   font-size: 28px;
 }
