--- a/src/component/Layout/Header/Header.scss
+++ b/src/component/Layout/Header/Header.scss
@@ -3,8 +3,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 20px 0;
+  user-select: none;
 
   &-search {
+    opacity: 1;
+    transition: opacity .2s ease;
+
+    &:active {
+      opacity: .7;
+    }
+
     i {
       font-size: 32px;
     }
@@ -16,6 +24,8 @@
     padding: 40px 40px 0;
 
     &-search {
+      cursor: pointer;
+
       i {
         font-size: 48px;
       }
