--- a/src/component/Layout/Stack/Stack.scss
+++ b/src/component/Layout/Stack/Stack.scss
@@ -16,12 +16,32 @@
 
   &-close {
     position: fixed;
-    top: 48px;
-    right: 40px;
+    top: 26px;
+    right: 20px;
     z-index: 2;
+    opacity: 1;
+    transition: opacity .2s ease;
+
+    &:active {
+      opacity: .7;
+    }
 
     i {
-      font-size: 56px;
+      font-size: 32px;
+    }
+  }
+}
+
+@media(min-width: 768px) {
+  .ui-stack {
+    &-close {
+      top: 48px;
+      right: 40px;
+      cursor: pointer;
+
+      i {
+        font-size: 56px;
+      }
     }
   }
 }
