--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -21,7 +21,7 @@
       left: 0;
       bottom: 0;
       right: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,0));
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.95), rgba(0,0,0,.1));
     }
   }
 
@@ -30,27 +30,32 @@
     position: relative;
     z-index: 1;
     height: 100%;
-    text-shadow: 1px 1px 0 rgba(0,0,0,.4);
+    text-shadow: 1px 1px 0 rgba(0,0,0,.7);
+  }
+
+  &-title {
+    padding-right: 40px;
   }
 
   &-date {
-    padding-top: 10px;
-    font-size: 18px;
+    padding-top: 6px;
+    font-size: 16px;
   }
 
   &-overview {
     max-width: 820px;
-    font-size: 18px;
+    font-size: 20px;
     padding-top: 40px;
     margin-bottom: 40px;
+    font-weight: 300;
   }
 
   &-genres {
-    font-size: 22px;
-    margin-bottom: 40px;
+    padding-bottom: 20px;
   }
 
   &-rating {
+    padding-top: 6px;
   }
 }
 
@@ -60,12 +65,20 @@
       padding: 40px;
     }
 
+    &-date {
+      font-size: 18px;
+      padding-top: 10px;
+    }
+
     &-overview {
-      font-size: 24px;
+      font-size: 26px;
+    }
+
+    &-rating {
+      padding-top: 2px;
     }
   }
 }
-
 
 @keyframes backdrop-zoom {
   from {
@@ -76,17 +89,3 @@
     transform: scale(1.3);
   }
 }
-
-@keyframes show-up {
-  from {
-    opacity: 0;
-    transform: translate3d(0, 40px, 0);
-  }
-
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-
