Added movie duration and credits. Added splash screen. Layout adjustments

--- a/src/asset/scss/app/typo.scss
+++ b/src/asset/scss/app/typo.scss
@@ -14,12 +14,14 @@
 
 
 h1 {
-  font-size: 28px;
+  font-size: 32px;
+  letter-spacing: -1px;
 }
 
 
 @media(min-width: 768px) {
   h1 {
     font-size: 48px;
+    letter-spacing: 0;
   }
 }
