--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -1,20 +1,16 @@
-html, body, #root {
-  height: 100%;
-}
-
 .layer-main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  transform: scale(1);
+  transform: scale(1) translate3d(0,0,0);
   transition: transform .3s ease;
 
-  &.stack-open {
-    transform: scale(0.95);
-  }
-
-  &-header {
-
+  &.stack-open, #root:not(.ready) & {
+    transform: scale(0.95) translate3d(0,0,0);
   }
 
   &-content {
