--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -7,34 +7,35 @@
     right: 0;
     overflow: hidden;
 
-    img {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      animation: backdrop-zoom 90s linear forwards;
-    }
-
-    &:after {
+    &:before, &:after {
       content: '';
       position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
       right: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.95), rgba(0,0,0,.1));
+      z-index: 1;
+      background-image: linear-gradient(to right, rgba(0,0,0,.7), rgba(0,0,0,0));
+    }
+
+    &:after {
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.7), rgba(0,0,0,0));
     }
   }
 
   &-content {
     padding: 20px;
     position: relative;
-    z-index: 1;
-    height: 100%;
+    z-index: 2;
     text-shadow: 1px 1px 0 rgba(0,0,0,.7);
   }
 
   &-title {
     padding-right: 40px;
+  }
+
+  &-rating {
+    padding-top: 6px;
   }
 
   &-date {
@@ -44,18 +45,38 @@
 
   &-overview {
     max-width: 820px;
-    font-size: 20px;
+    font-size: 19px;
+    line-height: 1.4;
     padding-top: 40px;
     margin-bottom: 40px;
     font-weight: 300;
   }
 
   &-genres {
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+
+    li {
+      font-size: 16px;
+      text-transform: uppercase;
+    }
   }
 
-  &-rating {
-    padding-top: 6px;
+  &-credits {
+    padding-bottom: 40px;
+
+    &-title {
+      font-size: 16px;
+      text-transform: uppercase;
+    }
+
+    &-value {
+      font-size: 17px;
+      font-weight: 300;
+    }
+
+    &:last-of-type {
+      padding-bottom: 0;
+    }
   }
 }
 
@@ -65,27 +86,46 @@
       padding: 40px;
     }
 
+    &-rating {
+      padding-top: 2px;
+    }
+
     &-date {
       font-size: 18px;
       padding-top: 10px;
     }
 
     &-overview {
-      font-size: 26px;
+      font-size: 24px;
     }
 
-    &-rating {
-      padding-top: 2px;
+    &-genres {
+      li {
+        font-size: 18px;
+      }
+    }
+
+    &-credits {
+      &-title {
+        font-size: 18px;
+      }
+
+      &-value {
+        font-size: 20px;
+      }
     }
   }
 }
 
-@keyframes backdrop-zoom {
-  from {
-    transform: scale(1);
-  }
+.fade-in {
+  animation: fade-in .4s ease;
+}
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
   to {
-    transform: scale(1.3);
+    opacity: 1;
   }
 }
