--- a/src/asset/scss/app/icon.scss
+++ b/src/asset/scss/app/icon.scss
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-logo:before {
+  content: "\e904";
+}
 .icon-close:before {
   content: "\e900";
 }
