--- a/src/component/Poster/Poster.scss
+++ b/src/component/Poster/Poster.scss
@@ -1,31 +1,69 @@
 .ui-poster {
   user-select: none;
-  //position: relative;
-  //width: 100%;
-  //padding-bottom: 150%;
+  position: relative;
+  width: 100%;
+  padding-bottom: 150%;
 
   &.has-click {
     cursor: pointer;
   }
 
-  img {
-    //position: absolute;
-    width: 100%;
-    display: block;
-    opacity: 0;
-    transition: opacity .3s ease;
+  &-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    img {
+      width: 100%;
+      display: block;
+      opacity: 0;
+      transition: opacity .3s ease;
+    }
+
+    &.no-image {
+      background-color: rgba(255, 255, 255, .05);
+    }
 
     &.loaded {
-      opacity: 1;
+      img {
+        opacity: 1;
+      }
     }
   }
 
+  &-title {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 24px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &.backdrop {
-    img {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      animation: backdrop-zoom 90s linear forwards;
+    .ui-poster-content {
+      position: static;
+
+      img {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        animation: backdrop-zoom 90s linear forwards;
+      }
+    }
+  }
+}
+
+
+@media(min-width: 768px) {
+  .ui-poster {
+    &-title {
+      padding: 0 40px;
+      font-size: 28px;
     }
   }
 }
