--- a/src/component/Stack/Search/Search.scss
+++ b/src/component/Stack/Search/Search.scss
@@ -3,9 +3,10 @@
     padding: 20px 20px 10px;
     position: sticky;
     top: 0;
-    background-color: rgba(0,0,0,.7);
+    background-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,.3));
     backdrop-filter: blur(30px);
     transform: translate3d(0,0,0);
+    z-index: 2;
   }
 
   &-input {
@@ -17,13 +18,16 @@
     border-bottom: 2px solid white;
     font-family: Oswald;
     font-weight: 300;
-    width: 100%;
+    width: calc(80% - 8px);
     padding-left: 36px;
     border-radius: 0;
 
+    &::placeholder {
+      color: rgba(255, 255, 255, .7);
+    }
+
     &-wrapper {
       position: relative;
-      width: calc(80% - 10px);
 
       .icon-search {
         position: absolute;
@@ -34,7 +38,12 @@
     }
 
     &-rating {
-      padding-top: 20px;
+      padding-top: 15px;
+      text-align: center;
+
+      i {
+        font-size: 32px;
+      }
     }
   }
 
@@ -47,6 +56,20 @@
     &-item {
       padding: 10px;
       width: 50%;
+    }
+  }
+
+  &-empty {
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+
+    p {
+      color: rgba(255, 255, 255, .7);
+      text-align: center;
+      font-size: 28px;
     }
   }
 }
@@ -73,7 +96,7 @@
         padding-top: 0;
         position: absolute;
         top: 24px;
-        right: 0;
+        right: calc(20% + 4px);
       }
     }
 
@@ -83,6 +106,15 @@
       &-item {
         padding: 20px;
         width: 20%;
+      }
+    }
+
+    &-empty {
+      height: 70%;
+      padding: 0 40px;
+
+      p {
+        font-size: 48px;
       }
     }
   }
