--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -21,6 +21,15 @@
     &:after {
       background-image: linear-gradient(to bottom, rgba(0,0,0,.7), rgba(0,0,0,0));
     }
+
+    .thanks-themoviedb {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      opacity: .9;
+      height: 15px;
+      user-select: none;
+    }
   }
 
   &-content {
