--- a/src/component/Layout/Layer/Layer.scss
+++ b/src/component/Layout/Layer/Layer.scss
@@ -6,13 +6,17 @@
   left: 0;
   z-index: 100;
   opacity: 1;
-  will-change: opacity, transform;
   transition: transform .4s ease;
   transform: scale(.95) translate3d(0,0,0);
   transform-style: preserve-3d;
   backdrop-filter: blur(30px);
   backface-visibility: hidden;
   perspective: 1000;
+
+  .has-video-stack.playing-video ~ &:not(.active) {
+    visibility: hidden;
+    transition: transform .4s ease, visibility 0s 1s;
+  }
 
   &.active {
     transform: scale(1) translate3d(0,0,0);
