--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -13,6 +13,11 @@
     transform: scale(0.95) translate3d(0,0,0);
   }
 
+  &.has-video-stack.playing-video {
+    visibility: hidden;
+    transition: transform .3s ease, visibility 0s 1s;
+  }
+
   &-content {
     flex: 1;
     overflow-x: scroll;
