--- a/src/component/Movie/Poster/Poster.scss
+++ b/src/component/Movie/Poster/Poster.scss
@@ -52,7 +52,8 @@
         width: 100vw;
         height: 100vh;
         object-fit: cover;
-        animation: backdrop-zoom 90s linear forwards;
+        //animation: backdrop-zoom 60s linear forwards;
+        transform: translate3d(0,0,0);
       }
     }
   }
@@ -69,10 +70,10 @@
 
 @keyframes backdrop-zoom {
   from {
-    transform: scale(1);
+    transform: scale(1) translate3d(0,0,0);
   }
 
   to {
-    transform: scale(1.3);
+    transform: scale(1.1) translate3d(0,0,0);
   }
 }
