--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -19,7 +19,7 @@
     }
 
     &:after {
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.7), rgba(0,0,0,0));
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,0));
     }
 
     .thanks-themoviedb {
@@ -27,13 +27,13 @@
       bottom: 20px;
       right: 20px;
       opacity: .9;
-      height: 15px;
+      height: 10px;
       user-select: none;
     }
   }
 
   &-content {
-    padding: 20px;
+    padding: 20px 20px 40px;
     position: relative;
     z-index: 2;
     text-shadow: 1px 1px 0 rgba(0,0,0,.7);
@@ -71,12 +71,35 @@
       padding-bottom: 0;
     }
   }
+
+  &-videos {
+    &-title {
+      padding-bottom: 6px;
+    }
+
+    &-wrap {
+      margin: 0 -20px;
+      overflow-x: scroll;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
 }
 
 @media(min-width: 768px) {
   .movie-stack {
+    &-backdrop {
+      .thanks-themoviedb {
+        height: 15px;
+      }
+    }
+
     &-content {
-      padding: 40px;
+      padding: 40px 40px 50px;
     }
 
     &-rating {
@@ -89,6 +112,12 @@
 
     &-overview {
       font-size: 24px;
+    }
+
+    &-videos {
+      &-wrap {
+        margin: 0 -40px;
+      }
     }
   }
 }
