--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -8,10 +8,12 @@
   'component/Layout/Layer/Layer',
   'component/Layout/Stack/Stack',
   'component/Layout/Header/Header',
+  'component/Layout/Lang/Lang',
 
   'component/Stack/Movie/Movie',
   'component/Stack/Search/Search',
   'component/Stack/Video/Video',
+  'component/Stack/Language/Language',
 
   'component/Movie/Poster/Poster',
   'component/Movie/Rating/Rating',
