--- a/src/component/Layout/Stack/Stack.scss
+++ b/src/component/Layout/Stack/Stack.scss
@@ -21,12 +21,7 @@
     top: 28px;
     right: 20px;
     z-index: 3;
-    opacity: 1;
-    transition: opacity .2s ease;
-
-    &:active {
-      opacity: .7;
-    }
+    transform: translate3d(0,0,0);
 
     i {
       font-size: 32px;
