Layout improvements, document titles, toast messages

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -9,6 +9,7 @@
   'component/Layout/Stack/Stack',
   'component/Layout/Header/Header',
   'component/Layout/Lang/Lang',
+  'component/Layout/Toast/Toast',
 
   'component/Stack/Movie/Movie',
   'component/Stack/Search/Search',
