--- a/src/component/Movie/Poster/Poster.scss
+++ b/src/component/Movie/Poster/Poster.scss
@@ -14,9 +14,12 @@
     left: 0;
     right: 0;
     bottom: 0;
+    overflow: hidden;
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       display: block;
       opacity: 0;
       transition: opacity .3s ease;
@@ -51,7 +54,6 @@
       img {
         width: 100vw;
         height: 100vh;
-        object-fit: cover;
         transform: translate3d(0,0,0);
       }
     }
