--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   transform: scale(1) translate3d(0,0,0);
+  transform-origin: center center;
   transition: transform .3s ease;
 
   &.stack-open, #root:not(.ready) & {
@@ -20,13 +21,6 @@
 
   &-content {
     flex: 1;
-    overflow-x: scroll;
-    -webkit-overflow-scrolling: touch;
-    scrollbar-width: none;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
   }
 }
 
