--- a/src/view/Main/Main.scss
+++ b/src/view/Main/Main.scss
@@ -1,22 +1,65 @@
-.movie-grid {
-  display: flex;
-  padding-left: 20px;
-  align-items: center;
+.main {
   height: 100%;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
 
-  &-item {
-    min-width: 85%;
-    padding-right: 20px;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  .movie-grid {
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+    height: 100%;
+
+    &-item {
+      min-width: calc(100vw * .85);
+      min-height: calc(100vw * .85 * 1.5 - 40px);
+      padding-right: 20px;
+      position: relative;
+
+      &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 20px;
+        top: 0;
+        left: 0;
+        background-color: rgba(255,255,255,.1);
+      }
+
+      &:after {
+        position: absolute;
+        bottom: 0;
+        right: 20px;
+        content: attr(data-index);
+        text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+        font-size: 10px;
+        font-weight: 300;
+        line-height: 1;
+        padding: 4px;
+      }
+    }
   }
 }
 
 @media(min-width: 768px) {
-  .movie-grid {
-    padding-left: 40px;
+  .main {
+    .movie-grid {
+      padding-left: 40px;
 
-    &-item {
-      min-width: 30%;
-      padding-right: 40px;
+      &-item {
+        min-width: calc(100vw * .3);
+        min-height: calc(((100vw * .3) - 40px) * 1.5);
+        padding-right: 40px;
+
+        &:before, &:after {
+          right: 40px;
+          font-size: 12px;
+        }
+      }
     }
   }
 }
