--- a/src/asset/scss/app/icon.scss
+++ b/src/asset/scss/app/icon.scss
@@ -30,8 +30,14 @@
 .icon-close:before {
   content: "\e900";
 }
+.icon-chevron-right:before {
+  content: "\e906";
+}
 .icon-star-outline:before {
   content: "\e903";
+}
+.icon-star-half:before {
+  content: "\e907";
 }
 .icon-star-rate:before {
   content: "\e902";
