--- a/src/component/Layout/Layer/Layer.scss
+++ b/src/component/Layout/Layer/Layer.scss
@@ -8,7 +8,7 @@
   opacity: 1;
   transition: transform .4s ease;
   transform: scale(.95) translate3d(0,0,0);
-  transform-origin: center center;
+  transform-origin: top center;
   transform-style: preserve-3d;
   backdrop-filter: blur(30px);
   backface-visibility: hidden;
@@ -20,6 +20,10 @@
     transition: transform .4s ease, visibility 0s 1s;
   }
 
+  &.hidden {
+    //visibility: hidden;
+  }
+
   &.active {
     transform: scale(1) translate3d(0,0,0);
   }
@@ -29,6 +33,7 @@
   }
 
   &.exit {
+    //pointer-events: none;
     animation: layer-hide .4s ease forwards;
   }
 }
