--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   transform: scale(1) translate3d(0,0,0);
-  transform-origin: center center;
+  transform-origin: top center;
   transition: transform .3s ease;
 
   &.stack-open, #root:not(.ready) & {
@@ -25,11 +25,20 @@
 }
 
 .ui-clickable {
+  cursor: pointer;
   opacity: 1;
   transition: opacity .2s ease;
-  cursor: pointer;
 
   &:active {
     opacity: .7;
+  }
+}
+
+.ui-tapable {
+  background-color: transparent;
+  transition: background-color .2s ease;
+
+  &:active {
+    background-color: rgba(255,255,255,.05);
   }
 }
