movie overview and person bio line-clamp

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -11,6 +11,7 @@
   'component/Layout/Lang/Lang',
   'component/Layout/Toast/Toast',
   'component/Layout/Offline/Offline',
+  'component/Layout/TextClamp/TextClamp',
 
   'component/Stack/Language/Language',
   'component/Stack/Movie/Movie',
