--- a/src/component/Movie/Genres/Genres.scss
+++ b/src/component/Movie/Genres/Genres.scss
@@ -1,14 +1,10 @@
 .ui-genres {
-  li {
-    font-size: 16px;
-    text-transform: uppercase;
-  }
+  font-size: 17px;
+  font-weight: 400;
 }
 
 @media(min-width: 768px) {
   .ui-genres {
-    li {
-      font-size: 18px;
-    }
+    font-size: 20px;
   }
 }
