--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -19,7 +19,7 @@
     }
 
     &:after {
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,0));
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.6), rgba(0,0,0,0));
     }
 
     .thanks-themoviedb {
@@ -77,6 +77,7 @@
   &-videos {
     &-title {
       padding-bottom: 6px;
+      font-size: 17px;
     }
 
     &-wrap {
@@ -128,6 +129,10 @@
     }
 
     &-videos {
+      &-title {
+        font-size: 20px;
+      }
+
       &-wrap {
         margin: 0 -40px;
       }
