improve images handling

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -12,6 +12,7 @@
   'component/Layout/Toast/Toast',
   'component/Layout/Offline/Offline',
   'component/Layout/TextClamp/TextClamp',
+  'component/Layout/Image/Image',
 
   'component/Stack/Language/Language',
   'component/Stack/Movie/Movie',
@@ -20,12 +21,15 @@
   'component/Stack/Cast/Cast',
   'component/Stack/Person/Person',
 
+  'component/Movie/Backdrop/Backdrop',
   'component/Movie/Poster/Poster',
   'component/Movie/Rating/Rating',
   'component/Movie/Info/Info',
   'component/Movie/Genres/Genres',
   'component/Movie/Credits/Credits',
   'component/Movie/Videos/Videos',
+
+  'component/Person/Picture/Picture',
 
   'component/Video/Progress/Progress',
 
