--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -59,14 +59,8 @@
   }
 
   &-credits {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: -10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 30px;
+    margin: -10px -20px 30px;
+    padding: 10px 20px;
 
     &:last-of-type {
       margin-bottom: 0;
