stack indicator improvements. other adjustments

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -7,6 +7,7 @@
   'component/Layout/Layout',
   'component/Layout/Layer/Layer',
   'component/Layout/Stack/Stack',
+  'component/Layout/Stack/Indicator/Indicator',
   'component/Layout/Header/Header',
   'component/Layout/Lang/Lang',
   'component/Layout/Toast/Toast',
