--- a/src/component/Layout/Layer/Layer.scss
+++ b/src/component/Layout/Layer/Layer.scss
@@ -20,12 +20,9 @@
     transition: transform .4s ease, visibility 0s 1s;
   }
 
-  &.hidden {
-    //visibility: hidden;
-  }
-
   &.active {
     transform: scale(1) translate3d(0,0,0);
+    z-index: 101;
   }
 
   &.enter {
