--- a/src/component/Layout/Stack/Indicator/Indicator.scss
+++ b/src/component/Layout/Stack/Indicator/Indicator.scss
@@ -1,21 +1,23 @@
 .ui-stack-indicator {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
-  height: 45px;
-  z-index: 3;
+  height: 60px;
+  bottom: 0;
+  z-index: 2;
   transform: translate3d(0,0,0);
+  //background-color: red;
 
   &:after {
     content: '';
     position: absolute;
     top: 10px;
     left: 50%;
-    margin-left: -60px;
-    width: 120px;
+    margin-left: -50px;
+    width: 100px;
     height: 5px;
-    background-color: rgba(255, 255, 255, .9);
+    background-color: rgba(255, 255, 255, .8);
     border-radius: 5px;
     opacity: 1;
     transform: scale(1, 1);
