--- a/src/component/Layout/Stack/Stack.scss
+++ b/src/component/Layout/Stack/Stack.scss
@@ -1,23 +1,33 @@
 .ui-stack {
   height: 100%;
-  animation: stack-show .4s cubic-bezier(.55,0,.1,1);
   transform-origin: top center;
   background-color: rgba(0,0,0,.6);
   backface-visibility: hidden;
   perspective: 1000;
   user-select: none;
 
+  .active.enter & {
+    animation: stack-show .4s cubic-bezier(.55,0,.1,1);
+  }
+
   &-content {
     height: 100%;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    transform: translate3d(0,0,0);
+    transition: transform .3s ease;
+    text-shadow: 1px 1px 0 rgba(0,0,0,1);
+
+    &[style]{
+      transition: none;
+    }
   }
 
   &-wrap {
     height: 100%;
     border-radius: 8px;
     overflow: hidden;
-    transform: scale(1) translate3d(0,0,0);
+    transform: scale(1);
     transition: transform .25s cubic-bezier(.55,0,.1,1);
     transform-origin: center center;
 
