--- a/src/component/Movie/Backdrop/Backdrop.scss
+++ b/src/component/Movie/Backdrop/Backdrop.scss
@@ -1,8 +1,18 @@
 .ui-backdrop {
+  width: 100vw;
+  height: calc(250px + env(safe-area-inset-top));
+  overflow: hidden;
+
   img {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    transform: translate3d(0,0,0);
+    border-radius: 0;
+    transform: scale(1.1);
+    transition: opacity .6s ease, transform .8s ease;
+
+    &.loaded {
+      transform: scale(1);
+    }
   }
 }
