--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -1,13 +1,8 @@
 .movie-stack {
   &-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    overflow: hidden;
+    position: relative;
 
-    &:before, &:after {
+    &:after {
       content: '';
       position: absolute;
       top: 0;
@@ -15,19 +10,16 @@
       bottom: 0;
       right: 0;
       z-index: 1;
-      background-image: linear-gradient(to right, rgba(0,0,0,.7), rgba(0,0,0,0));
-    }
-
-    &:after {
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.6), rgba(0,0,0,0));
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,0));
     }
 
     .thanks-themoviedb {
+      transform: translate3d(0,0,0);
       position: absolute;
-      bottom: 20px;
-      right: 20px;
+      bottom: 10px;
+      right: 10px;
       opacity: .9;
-      height: 10px;
+      height: 8px;
     }
   }
 
@@ -35,7 +27,10 @@
     padding: 20px 20px 40px;
     position: relative;
     z-index: 2;
-    text-shadow: 1px 1px 0 rgba(0,0,0,.7);
+  }
+
+  &-head {
+    padding-bottom: 20px;
   }
 
   &-rating {
@@ -50,16 +45,16 @@
     max-width: 820px;
     font-size: 18px;
     line-height: 1.4;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-weight: 300;
   }
 
   &-genres {
-    padding-bottom: 40px;
+    padding-bottom: 20px;
   }
 
   &-credits {
-    margin: -10px -20px 30px;
+    margin: -10px -20px 10px;
     padding: 10px 20px;
 
     &:last-of-type {
