--- a/src/component/Stack/Search/Search.scss
+++ b/src/component/Stack/Search/Search.scss
@@ -1,6 +1,7 @@
 .search-stack {
   &-head {
-    padding: 40px 20px 10px;
+    padding: 60px 20px 10px;
+    padding-top: calc(60px + env(safe-area-inset-top));
     position: sticky;
     top: 0;
     background-color: rgba(0,0,0,.9);
@@ -46,7 +47,7 @@
   }
 
   &-grid {
-    padding: 0 10px 10px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
