movie backdrop desktop media query

--- a/src/component/Movie/Backdrop/Backdrop.scss
+++ b/src/component/Movie/Backdrop/Backdrop.scss
@@ -16,3 +16,10 @@
     }
   }
 }
+
+@media(min-width: 768px) {
+  .ui-backdrop {
+    height: calc(400px + env(safe-area-inset-top));
+    overflow: hidden;
+  }
+}
