--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -37,6 +37,10 @@
   background-color: transparent;
   transition: background-color .2s ease;
 
+  &-round {
+    border-radius: 2px;
+  }
+
   &:active {
     background-color: rgba(255,255,255,.05);
   }
@@ -46,4 +50,8 @@
   .ui-clickable {
     cursor: pointer;
   }
+}
+
+.ui-keyboard-fill {
+  height: 330px;
 }
