--- a/src/component/Layout/Stack/Stack.scss
+++ b/src/component/Layout/Stack/Stack.scss
@@ -16,7 +16,7 @@
     -webkit-overflow-scrolling: touch;
     transform: translate3d(0,0,0);
     transition: transform .3s ease;
-    text-shadow: 1px 1px 0 rgba(0,0,0,1);
+    //text-shadow: 1px 1px 0 rgba(0,0,0,1);
 
     &[style]{
       transition: none;
@@ -38,7 +38,7 @@
 
   &-head {
     padding: 20px 0 40px;
-    text-shadow: 1px 1px 0 rgba(0,0,0,.7);
+    //text-shadow: 1px 1px 0 rgba(0,0,0,.7);
   }
 
   &-close {
