--- a/src/component/Stack/Person/Person.scss
+++ b/src/component/Stack/Person/Person.scss
@@ -1,6 +1,7 @@
 .person-stack {
   padding: 20px;
   padding-top: calc(20px + env(safe-area-inset-top));
+  padding-bottom: env(safe-area-inset-bottom);
 
   dl {
     dt {
@@ -25,13 +26,13 @@
   }
 
   &-picture {
-    display: flex;
-    justify-content: center;
+    width: 185px;
+    margin: auto;
     margin-bottom: 40px;
   }
 
   &-known-for {
-    margin-bottom: 40px;
+    //margin-bottom: 40px;
   }
 
   &-movies {
