--- a/src/component/Stack/Search/Search.scss
+++ b/src/component/Stack/Search/Search.scss
@@ -1,10 +1,12 @@
 .search-stack {
+  padding-bottom: env(safe-area-inset-bottom);
+
   &-head {
-    padding: 60px 20px 10px;
-    padding-top: calc(60px + env(safe-area-inset-top));
+    padding: 50px 20px 0;
+    padding-top: calc(50px + env(safe-area-inset-top));
     position: sticky;
     top: 0;
-    background-color: rgba(0,0,0,.9);
+    background-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,.8), rgba(0,0,0,.2));
     z-index: 2;
   }
 
@@ -14,12 +16,17 @@
     font-size: 28px;
     border: 0;
     outline: none;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid rgba(255,255,255,.7);
     font-family: Oswald;
     font-weight: 300;
     width: 100%;
     padding-left: 36px;
     border-radius: 0;
+    //text-shadow: 1px 1px 0 rgba(0,0,0,1);
+
+    &:focus {
+      border-bottom: 1px solid white;
+    }
 
     &::placeholder {
       color: rgba(255, 255, 255, .7);
@@ -47,14 +54,85 @@
   }
 
   &-grid {
-    padding: 10px;
+    padding: 0 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
 
+    &-head {
+      width: 100%;
+      padding: 15px 5px 15px;
+      font-size: 17px;
+    }
+
     &-item {
-      padding: 10px;
-      width: 50%;
+      padding: 5px;
+      width: 33.33333%;
+
+      &.person:not(.top-result) {
+        width: 50%;
+
+        .content {
+          display: flex;
+          align-items: center;
+        }
+
+        //padding: 10px 5px;
+
+        .search-stack-grid-item-poster {
+          min-width: 50px;
+        }
+
+        .person-name {
+          padding: 0 10px;
+        }
+      }
+
+
+      &.top-result {
+        width: 100%;
+        //padding-top: 15px;
+
+        .content {
+          display: flex;
+        }
+
+        //padding-bottom: 15px;
+
+        .search-stack-grid-item-poster {
+          width: 35%;
+
+          //flex: 1;
+        }
+
+        .search-stack-grid-item-info {
+          width: 65%;
+          padding-left: 20px;
+
+          .media-type {
+            padding-top: 5px;
+            font-weight: 300;
+            font-size: 14px;
+            padding-bottom: 10px;
+            text-transform: capitalize;
+          }
+
+          .title {
+            font-size: 20px;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            -webkit-line-clamp: 3;
+          }
+
+          .department, .release-date {
+            //font-weight: 300;
+            font-size: 14px;
+            padding-top: 5px;
+          }
+        }
+
+      }
     }
   }
 
@@ -67,6 +145,7 @@
 
     p {
       color: rgba(255, 255, 255, .7);
+      //text-shadow: none;
       text-align: center;
       font-size: 28px;
     }
