search results code improvements

--- a/src/component/Stack/Person/Person.scss
+++ b/src/component/Stack/Person/Person.scss
@@ -1,7 +1,7 @@
 .person-stack {
   padding: 20px;
   padding-top: calc(20px + env(safe-area-inset-top));
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: calc(20px + env(safe-area-inset-bottom));
 
   dl {
     dt {
