--- a/src/component/Stack/Search/Search.scss
+++ b/src/component/Stack/Search/Search.scss
@@ -1,5 +1,5 @@
 .search-stack {
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: calc(20px + env(safe-area-inset-bottom));
 
   &-head {
     padding: 50px 20px 0;
@@ -22,7 +22,6 @@
     width: 100%;
     padding-left: 36px;
     border-radius: 0;
-    //text-shadow: 1px 1px 0 rgba(0,0,0,1);
 
     &:focus {
       border-bottom: 1px solid white;
@@ -71,6 +70,12 @@
 
       &.person:not(.top-result) {
         width: 50%;
+        //background-color: red;
+
+        &:nth-of-type(odd){
+          //background-color: blue;
+          //padding-left: 0;
+        }
 
         .content {
           display: flex;
@@ -110,7 +115,7 @@
           padding-left: 20px;
 
           .media-type {
-            padding-top: 5px;
+            padding-top: 10px;
             font-weight: 300;
             font-size: 14px;
             padding-bottom: 10px;
