--- a/src/component/Movie/Backdrop/Backdrop.scss
+++ b/src/component/Movie/Backdrop/Backdrop.scss
@@ -15,6 +15,12 @@
       transform: scale(1);
     }
   }
+
+  &-holder {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .05);
+  }
 }
 
 @media(min-width: 768px) {
