--- a/src/component/Movie/Poster/Poster.scss
+++ b/src/component/Movie/Poster/Poster.scss
@@ -19,13 +19,9 @@
       height: 100%;
       object-fit: cover;
     }
-
-    &.no-image {
-      background-color: rgba(255, 255, 255, .05);
-    }
   }
 
-  &-title {
+  &-holder {
     width: 100%;
     height: 100%;
     text-align: center;
@@ -34,6 +30,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255, 255, 255, .05);
   }
 }
 
