added series support

--- a/src/component/Media/Credits/Credits.scss
+++ b/src/component/Media/Credits/Credits.scss
@@ -1,4 +1,4 @@
-.ui-credits {
+.media-credits {
   &-title {
     font-size: 17px;
   }
@@ -10,7 +10,7 @@
 }
 
 @media(min-width: 768px) {
-  .ui-credits {
+  .media-credits {
     &-title {
       font-size: 20px;
     }
