--- a/src/component/Media/Genres/Genres.scss
+++ b/src/component/Media/Genres/Genres.scss
@@ -1,10 +1,10 @@
-.ui-genres {
+.media-genres {
   font-size: 17px;
   font-weight: 400;
 }
 
 @media(min-width: 768px) {
-  .ui-genres {
+  .media-genres {
     font-size: 20px;
   }
 }
