--- a/src/component/Media/Rating/Rating.scss
+++ b/src/component/Media/Rating/Rating.scss
@@ -1,11 +1,11 @@
-.ui-rating {
+.media-rating {
   i {
     font-size: 22px;
   }
 }
 
 @media(min-width: 768px) {
-  .ui-rating {
+  .media-rating {
     i {
       font-size: 32px;
     }
