--- a/src/component/Movie/Info/Info.scss
+++ b/src/component/Movie/Info/Info.scss
@@ -1,9 +1,9 @@
-.ui-info {
+.movie-info {
   font-size: 16px;
 }
 
 @media(min-width: 768px) {
-  .ui-info {
+  .movie-info {
     font-size: 18px;
   }
 }
