--- a/src/component/Media/Backdrop/Backdrop.scss
+++ b/src/component/Media/Backdrop/Backdrop.scss
@@ -1,4 +1,4 @@
-.ui-backdrop {
+.media-backdrop {
   width: 100vw;
   height: calc(250px + env(safe-area-inset-top));
   overflow: hidden;
@@ -24,7 +24,7 @@
 }
 
 @media(min-width: 768px) {
-  .ui-backdrop {
+  .media-backdrop {
     height: calc(400px + env(safe-area-inset-top));
     overflow: hidden;
   }
