--- a/src/component/Media/Poster/Poster.scss
+++ b/src/component/Media/Poster/Poster.scss
@@ -1,4 +1,4 @@
-.ui-poster {
+.media-poster {
   user-select: none;
   position: relative;
   width: 100%;
@@ -35,7 +35,7 @@
 }
 
 @media(min-width: 768px) {
-  .ui-poster {
+  .media-poster {
     &-title {
       padding: 0 40px;
       font-size: 24px;
