Added watch providers. + selectors improvements

--- a/src/asset/scss/app.scss
+++ b/src/asset/scss/app.scss
@@ -28,6 +28,8 @@
   'component/Media/Credits/Credits',
   'component/Media/Rating/Rating',
   'component/Media/Videos/Videos',
+  'component/Media/Watch/Availability/Availability',
+  'component/Media/Watch/Providers/Providers',
 
 
   'component/Movie/Info/Info',
