--- a/src/component/Stack/Movie/Movie.scss
+++ b/src/component/Stack/Movie/Movie.scss
@@ -3,6 +3,7 @@
 
   &-backdrop {
     position: relative;
+    overflow: hidden;
 
     &:after {
       content: '';
@@ -15,15 +16,19 @@
       background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,0));
     }
 
-    .thanks-themoviedb {
-      transform: translate3d(0,0,0);
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      opacity: .9;
-      height: 8px;
-    }
+    /*
+    */
   }
+
+  .thanks-themoviedb {
+    transform: translate3d(0,0,0);
+    position: absolute;
+    bottom: 12px;
+    right: 20px;
+    opacity: .95;
+    height: 8px;
+  }
+
 
   &-content {
     padding: 20px 20px 0;
